Improve code formatting consistency